# deckd

./: .gitignore  AGENTS.md  CONTEXT.md  Justfile  README.md  justfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
client/: .env.development  .env.production  eslint.config.js  gallery.html  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
client/.ladle/: components.tsx
client/e2e/: daemon-log.ts  find-chromium.mjs  kbd-mode.spec.ts  manual-control.spec.ts
client/public/: manifest.json
client/src/: App.tsx  ButtonGrid.stories.tsx  ButtonGrid.tsx  Gallery.tsx  Icon.stories.tsx  Icon.tsx  JogStrip.stories.tsx  JogStrip.tsx  KbdMode.test.tsx  KbdMode.tsx  ManualControl.test.tsx  ManualControl.tsx  PasswordGate.test.tsx  PasswordGate.tsx  Settings.test.tsx  Settings.tsx  Surface.stories.tsx  Trackpad.tsx  demo.ts  fonts.ts  gallery-entry.tsx  gallery.css  main.tsx  orientation.ts  protocol.ts  settings-store.ts  socket.ts  style.css  wake-lock.ts
daemon/: README.md
daemon/deckd/: __init__.py  __main__.py  actions.py  auth.py  cli.py  dev.py  input.py  layouts.py  platform.py  platform_macos.py  protocol.py  server.py
docs/: INCEPTION.md  SPIKES.md  spike-kde-wayland-focus.md
docs/adr/: 0001-keymap-physical-keys.md  0002-momentum-daemon-side.md  0003-persistent-chrome.md  0004-orientation-scaling.md  0005-dynamic-widget-state-future.md  0006-widget-visual-styling.md  0007-chrome-app-identity-badge.md
layouts/: default.yaml  firefox.yaml  terminal.yaml  tilix.yaml
layouts.macos/: default.yaml  firefox.yaml
packaging/gnome-shell/deckd-focus@local/: extension.js  metadata.json
packaging/kwin-script/deckd-focus/: metadata.json
packaging/kwin-script/deckd-focus/contents/code/: main.js
packaging/nixos/: deckd-spike.nix
packaging/udev/: 70-deckd-uinput.rules
scripts/: check_focus_macos.py  check_uinput.py  install_evdev_source.sh  send_scroll.py  smoke.py  watch_focus.py
scripts/no-evdev/: evdev.py
tests/: conftest.py  test_actions.py  test_auth.py  test_client_manifest.py  test_deckd_window.py  test_focus.py  test_input.py  test_layouts.py  test_platform.py  test_platform_kde.py  test_platform_macos.py  test_server.py  test_server_auth.py
tests/fixtures/layouts/: default.yaml  firefox.yaml
