[project]
name = "deckd"
version = "0.0.1"
description = "App-aware touch control surface daemon"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "dbus-fast>=5",
    "watchfiles>=1.0",
]

[project.optional-dependencies]
uinput = [
    "evdev-binary>=1.9",
]
dev = [
    "websockets>=13",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
macos = [
    # PyObjC Quartz for synthetic wheel-event injection via CGEventCreateScrollWheelEvent.
    # Needed on macOS for the jogstrip to actually scroll the focused window.
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
deckd = "deckd.__main__:main"
deckd-dev = "deckd.dev:main"
deckctl = "deckd.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["daemon"]
include = ["deckd*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
